# NextSpyke

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  initial_infos.md  observability-baseline.md  pyproject.toml  renovate.json  requirements.txt  schema.sql
.github/workflows/: build-and-push.yml  ci.yml  codeql.yml  container-release.yml  dependency-review.yml
docs/: MANUAL_GITHUB_SETUP.md  PRODUCTION_DATA_CLEANUP.md  ROLLBACK.md  SECURITY_RELEASE_POLICY.md
observability/grafana/dashboards/: nextspyke-metrics.json  nextspyke-overview.json  nextspyke-stats.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasource.yml
observability/loki/: loki.yml
observability/prometheus/: prometheus.yml
observability/promtail/: promtail.yml
scripts/: run_db_tests.py
src/nextspyke/: __init__.py  app.py  config.py  db.py  health.py  ingest.py  logging.py  metrics.py
tests/: test_app.py  test_app_runtime.py  test_core_coverage.py  test_db_integration.py  test_health.py  test_logging.py  test_metrics.py
