[project]
name = "nextspyke"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathaniel Hartmann",email = "nathaniel.hartmann@partner.kit.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prometheus-client==0.20.0",
    "psycopg[binary]==3.2.6",
]

[project.optional-dependencies]
dev = [
    "coverage==7.6.10",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
