[project]
name = "nextspyke"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathaniel Hartmann",email = "nathaniel.hartmann@partner.kit.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prometheus-client==0.20.0",
    "psycopg[binary]==3.2.6",
]

[project.optional-dependencies]
dev = [
    "coverage==7.6.10",
    "ruff (==0.15.20)",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"tests/*.py" = ["E402"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
